[BUGFIX] remove z-index on content elements, but rather place it on the content handles
Reviewed-on: https://review.typo3.org/24330
Tested-by: Sebastian Kurfuerst
Tested-by: Karsten Dambekalns
Original-Commit-Hash: 5933a355b60607d4a7858a6298d9e2a69a51e39a

--- a/TYPO3.Neos/Resources/Private/Styles/_Content.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/_Content.scss
@@ -1,5 +1,4 @@
 .neos-contentelement {
-	z-index: 10001;
 
 	&.neos-contentelement-hidden > * {
 		@include opacity(0.2);
