--- a/TYPO3.Neos/Resources/Private/Styles/_InlineEditing.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/_InlineEditing.scss
@@ -1,6 +1,7 @@
 /** Inline editing handles **/
 .neos-handle-container {
 	position: absolute;
+	z-index: 10001;
 
 	.neos-btn-toolbar {
 		text-align: right !important;
